# spec_fitter

./: .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  spectrum_gui.py
.claude/: settings.local.json
spec_fitter/: __init__.py  __main__.py  app.py  background.py  profile.py  widgets.py
